<resources>
    <string name="app_name">Lab Session 05</string>
    <string name="student_marks">Student Marks</string>
    <string name="customer_database">Customer DataBase</string>
    <string name="city">City</string>
    <string name="name">Name</string>
    <string name="dob">DOB</string>
    <string name="account_balance">Account Balance</string>
    <string name="expire_date">Expair Date</string>
    <string name="ticket_amount">Ticket Amount</string>
    <string name="nic">NIC</string>
    <string name="destinations">Destinations</string>
</resources>